fix: MMUA prompt bug fixed & 3D starts after gpt

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ __pycache__
 
 # Data folder for inputs
 data/
-
+NvidiaWarp-GarmentCode
+Configured_design/
+Configured_design_3D/
+env
 #Environment file
 .env
 
