--- a/assets/design_params/default.yaml
+++ b/assets/design_params/default.yaml
@@ -47,7 +47,7 @@ design:
       default_prob: 0.5
   shirt:
     openfront:
-      v: true
+      v: false
       range:
       - true
       - false
