--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 OPENAI_API_KEY='your_openai_api_key'
+GEMINI_API_KEY='your_gemini_api_key'
+JWT_SECRET_KEY='random_jwt_secret_key'
+UI_STORAGE_KEY='random_nicegui_secret_key'
