--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
 openai
+google.genai
+numpy
+scipy
+pyaml
+svgwrite
+psutil
+matplotlib
+svgpathtools
+cairosvg
+nicegui
+trimesh
+libigl
+pyrender
+cgal
 rich
 ezdxf
-google-genai 
 fastapi==0.115.2
 uvicorn==0.32.0
 pyyaml==6.0.2
