--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,8 @@
 openai
-google.genai
-numpy<2.0.0
-scipy
-pyaml
-svgwrite
-psutil
-matplotlib
-svgpathtools
-cairosvg
-nicegui
-trimesh
-libigl
-pyrender
-cgal
-rich
-ezdxf
-fastapi==0.115.2
-uvicorn==0.32.0
-pyyaml==6.0.2
-bcrypt
+google-genai
 pyjwt
 sqlalchemy
+bcrypt
+ezdxf
+rich
+garment
