db cron application completed: password encrypted db file will be uploaded to drive

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,23 @@
-OPENAI_API_KEY='your_openai_api_key'
-GEMINI_API_KEY='your_gemini_api_key'
-JWT_SECRET_KEY='random_jwt_secret_key'
-UI_STORAGE_KEY='random_nicegui_secret_key'
+OPENAI_API_KEY = 'your_openai_api_key'
+GEMINI_API_KEY = 'your_gemini_api_key'
+JWT_SECRET_KEY = 'random_jwt_secret_key'
+UI_STORAGE_KEY = 'random_nicegui_secret_key'
+
+# database
+DATABASE = "mysql" # "sqlite" or "mysql" only
+
+# if sqlite
+DATABASE_URL = "sqlite:///./app.db"
+
+# if mysql
+MYSQL_USER = ""
+MYSQL_PASSWORD = ""
+MYSQL_HOST = "localhost"
+MYSQL_PORT = "3306"
+MYSQL_DB = ""
+
+# DB cron
+GOOGLE_DRIVE_FOLDER_ID = "<GOOGLE_DRIVE_FOLDER_ID>" # copied from drive folder url after setting up db-cron-app
+GOOGLE_SERVICE_ACCOUNT_FILE = "service_account.json"
+BACKUP_DIR = "./db-backup-cron-app/db-backups"
+BACKUP_PASSWORD = "used to encrypt the db file before saving"
