--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ MYSQL_DB = ""
 
 # DB cron
 GOOGLE_DRIVE_FOLDER_ID = "<GOOGLE_DRIVE_FOLDER_ID>" # copied from drive folder url after setting up db-cron-app
-GOOGLE_SERVICE_ACCOUNT_FILE = "service_account.json"
-BACKUP_DIR = "./db-backup-cron-app/db-backups"
 BACKUP_PASSWORD = "used to encrypt the db file before saving"
+
+# must use docker compose to start the docker image to use env properly
+DOCKER_GOOGLE_SERVICE_ACCOUNT_FILE = "/service_account.json"
+DOCKER_BACKUP_DIR = "/db-backups"
+DOCKER_DATABASE_PATH = "/GarmentCode/app.db"
