--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./db-backup-cron-app:/GarmentCode/db-backup-cron-app
       - ./logs:/var/log
+      - ./data:/GarmentCode/data
     environment:
       - PORT=3000
       - OPENAI_API_KEY=${OPENAI_API_KEY}
