fix: update CUDA version to 12.8 and adjust Dockerfile for compatibility

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,4 +31,5 @@ services:
       - GOOGLE_SERVICE_ACCOUNT_FILE=${DOCKER_GOOGLE_SERVICE_ACCOUNT_FILE}
       - BACKUP_DIR=${DOCKER_BACKUP_DIR}
       - BACKUP_PASSWORD=${BACKUP_PASSWORD}
+    runtime: nvidia
     restart: unless-stopped
